--- a/main.css
+++ b/main.css
@@ -1,66 +1,41 @@
 body{
     margin: 0%;
 }
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-  }
 * {
     box-sizing: border-box;
   }
-#top-nav {
+  .topnav {
     display: flex;
-    border: red solid 2px;
+    overflow: hidden;
     height: 10vh;
     background-color: #002D62;
     align-items: center;
-    
-}
-#top-nav>a>img{
-    height: 5vh;
-    width: 5vw;
-    margin-right: 0.5em;
-    margin-left: 0.5em;
-}
-#top-nav > ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #002D62;
   }
-
-#top-nav li {
+  
+  .topnav>a>img{
+      height: 5vh;
+      width: 5vw;
+      margin-right: 0.5em;
+      margin-left: 0.5em;
+  }
+  
+  .topnav a {
     float: left;
-    list-style-type: none; 
-    /* border: red solid 2px;  */
-    margin-right: 1.5em;
-  }
-
-  #top-nav li:hover a{
-    color: ghostwhite;
-    font-size: 1.6em;
-  }
-
-  #top-nav li>a {
-    font-size: 1.5em;
-    color: gainsboro;
     display: block;
-    padding: 8px;
+    color: gainsboro;
     background-color: #002D62;
+    text-align: center;
+    padding: 0.5em 0.5em;
     text-decoration: none;
+    font-size: 1.3em;
+    margin: 0.2em;
   }
+  
+  .topnav a:not(:first-child):hover {
+    color: white;
+    font-size: 1.4em;
+  }
+  
   
 
 #nav-bot{
