--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 body {
   margin:0;
   font-family: 'Heiti TC', '黑體-繁', 'Microsoft JhengHei', '微軟正黑體', sans-serif;
-  background-color: #EB6E1F;
+  background-color: white;
   position: relative;
   /* border: red solid 2px; */
 }
@@ -76,11 +76,11 @@ img {vertical-align: middle;}
 .slideshow-container {
   /* max-width: 100%; */
   /* height: 100%; */
-  width: 60%;
-  position: relative;
-  margin: 0;
-  order: 2;
-  border: red solid 2px;
+  width: 70%;
+  /* position: relative; */
+  margin: 0;;
+  /* order: 2; */
+  /* border: red solid 2px; */
 }
 
 .slideshow-container img{
@@ -90,8 +90,9 @@ img {vertical-align: middle;}
 
 
 
-table {
-  width: 20%;
+#standings {
+  width: 18%;
+  /* flex-grow: 1; */
   position: relative;
   border-collapse: collapse;
   border-spacing: 0;
@@ -103,12 +104,12 @@ table {
   
 }
 
-th, td {
+#standings th,#standings td {
   text-align: center;
   padding: 0.5em;
 }
 
-tr:nth-child(even) {
+#standings tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
@@ -117,25 +118,25 @@ tr:nth-child(even) {
   width: 5vh;
 }
 
-tr th{
+#standings th{
   color: black;
   background-color: ghostwhite;
   height: 5vh;
 }
 
 #under-nav{
-  border: black solid 2px;
+  /* border: black solid 2px; */
+  margin-top: 3em;
+  background-color: white;
   /* float: left; */
   display: flex;
-  flex-wrap: nowrap;
+  justify-content: center;
   
 }
 
-.grid-container{
-  order: 3;
-  display: grid;
-  grid-template-columns: auto auto;
-}
+
+
+
 
 
 
