--- a/main.css
+++ b/main.css
@@ -206,7 +206,7 @@ table caption {
 
 #fis {
   display: flex;
-  border: black 2px solid;
+  /* border: black 2px solid; */
   /* width: 100%; */
 }
 
@@ -227,16 +227,20 @@ table caption {
   position: relative;
   margin: 0 60px 0 24px;
   padding: 0 8px;
-  color: #003278;
+  /* color: #003278; */
   font-size: 1.125rem;
   font-weight: bold;
-  text-wrap: nowrap;
+  white-space: nowrap;
 
 }
 
-/* .p-name{
-  border: #C0111F solid 1px;
-} */
+.p-name{
+  color: #555;
+}
+
+.p-name1{
+  color: #003278;
+}
 
 .rank1 {
   display: flex;
@@ -272,7 +276,7 @@ table caption {
 
 }
 
-.topERA ul li::before{
+/* .topERA ul li::before{
   content: "";
   display: block;
   width: 100%;
@@ -281,13 +285,13 @@ table caption {
   left: 0;
   position: absolute;
   border-top: 1px solid #e5e5e5;
-}
+} */
 
-.topERA ul li::after{
+/* .topERA ul li::after{
   content: "";
   display: block;
   clear: both;
-} 
+}  */
 
 /* .p-name::after{
   content: "";
@@ -302,8 +306,9 @@ table caption {
 
 
 .topERA {
-  border: blue solid 2px;
+  /* border: blue solid 2px; */
   width: 100%;
+  margin-left: 20px;
 }
 
 .topERA ul {
@@ -311,7 +316,7 @@ table caption {
   /* position: relative; */
   /* border: green solid 2px; */
   margin-top: 5px;
-  margin-left: 14px;
+  padding-left: 5px;
   /* overflow: hidden; */
 
 }
@@ -320,11 +325,21 @@ table caption {
   /* display: block; */
   margin-bottom: 14px;
   list-style: none;
-  left: -50px;
+  left: 0px;
   position: relative;
+  /* width: ; */
   min-width: 100%;
-  /* border: yellow solid 2px; */
+  /* border-bottom: #003278 1px solid; */
 
+}
+
+.topERA ul li:first-child{
+  margin-top: 10px;
+  border-bottom: #003278 1px dashed;
+}
+.topERA ul li:not(first-child){
+  border-bottom: #666 1px dashed;
+  margin-bottom: 20px;
 }
 
 .num{
@@ -333,7 +348,20 @@ table caption {
   align-items: center;
   vertical-align: middle;
   top:0;
-  right: -30px;
+  right: 0px;
   height: 100%;
   /* min-width: 100%; */
 }
+
+
+
+.posttitle {
+  margin-top: 20px;
+  text-align: center;
+  color: white;
+  font-size: 2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+  /* border: red 2px solid; */
+}
+
