--- a/player/infield.css
+++ b/player/infield.css
@@ -121,7 +121,7 @@ body {
 
  #corey-b{
     display: flex;
-    background-color: #003278;
+    background-color: #ececec;
  }
 
  #corey-bio ul{
@@ -131,11 +131,21 @@ body {
     /* border: red 3px solid; */
     /* background-color: #e5e5e5; */
  }
- #corey-bio ul li{
+ 
+ 
+
+ .liTitle{
     font-size: 20px;
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
+    font-weight: 600;
+    color: #333;
  }
 
+ .liContent{
+    font-size: 20px;
+    color: #333;
+    /* font-weight: bold; */
+ }
 
   
   .column {
@@ -150,6 +160,7 @@ body {
     width: 100%;
     border: 1px solid #ddd;
     background-color: white;
+    color: #333;
   }
   
   
@@ -158,8 +169,74 @@ body {
     text-align: center;
     padding: 16px;
   }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
+
+  th{
+    background-color: lightgrey;
+    border: 1px solid lightgrey;
+  }
+
+  td:first-child{
+    background-color: #F2f2f2;
+    /* border: 1px solid lightgrey; */
+}
+
+td:not(:first-child){
+    background-color: #FFFFFF;
+    border: 1px solid lightgrey;
+  }
+
+.infield{
+    margin-bottom: 200px;
+}
+
+
+#jung{
+    background-image: url("../img/josh-jung.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* border: red 3px solid; */
+    min-height: 500px;
+    position: relative;
+ }
+
+ #jung>div {
+    /* border: yellow 3px solid; */
+    position: absolute;
+    /* padding: 5px; */
+    left: 0;
+    bottom: 0;
+ }
+ 
+ #lowe{
+     background-image: url("../img/nathaniel-lowe.jpeg");
+     background-repeat: no-repeat;
+     background-size: cover;
+     /* border: red 3px solid; */
+     min-height: 500px;
+     position: relative;
+  }
+ 
+  #lowe>div {
+     /* border: yellow 3px solid; */
+     position: absolute;
+     /* padding: 5px; */
+     left: 0;
+     bottom: 0;
   }
   
+  #marcus{
+      background-image: url("../img/nathaniel-lowe.jpeg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      /* border: red 3px solid; */
+      min-height: 500px;
+      position: relative;
+   }
+  
+   #marcus>div {
+      /* border: yellow 3px solid; */
+      position: absolute;
+      /* padding: 5px; */
+      left: 0;
+      bottom: 0;
+   }
