--- a/player/infield.css
+++ b/player/infield.css
@@ -225,7 +225,7 @@ td:not(:first-child){
   }
   
   #marcus{
-      background-image: url("../img/nathaniel-lowe.jpeg");
+      background-image: url("../img/marcus-semin.jpeg");
       background-repeat: no-repeat;
       background-size: cover;
       /* border: red 3px solid; */
