--- a/game/game.css
+++ b/game/game.css
@@ -260,6 +260,7 @@ body {
   /* border: #C0111F 2px solid; */
   display: none;
   text-align: center;
+  /* background-color: #003278; */
 }
 
 .box-bg:hover a div{
