--- a/game/game.css
+++ b/game/game.css
@@ -267,6 +267,18 @@ body {
   display: block;
 }
 
+.top-bg{
+  /* border: rebeccapurple 2px solid; */
+  text-align: center;
+}
+
+.top-bg img{
+  border-radius: 8px;
+  max-width: 1000px;
+  /* max-width: 1500px; */
+  height: 600px;
+}
+
 
 
 
