--- a/about.css
+++ b/about.css
@@ -85,28 +85,37 @@ body {
   article{
     display: flex;
     flex-direction: column;
+    /* background-color: #003278; */
     /* justify-content: center; */
-    background-color: #e5e5e5f4;
+    background-color: #131a20;
     /* border: yellow 2px solid; */
     
   }
 
   .inarticle{
     flex: 10;
+    color: white;
     /* border: black 2px solid; */
-    margin: auto 10px;
-    font-size: 1.3em;
+    margin: auto 20px;
+    /* font-size: 1.2em; */
   }
 
   .title-article{
     /* border: red solid 2px; */
-    margin-left: 50px;
+    color: white;
+    padding-left: 100px;
     font-size: 2em;
+    /* background-color: #131a20; */
   }
 
   .content{
+    /* border: red solid 2px; */
     top: 60px;
     display: flex;
+    width: 950px;
+    border-radius: 8px;
+    margin: 0 auto;
+    /* background-color: #131a20; */
     /* position: absolute; */
   }
 
@@ -120,18 +129,20 @@ body {
   }
   #content{
     line-height: 180%;
-    font-size: 24px;
+    font-size: 20px;
     flex: 8;
   }
 
   .top-bg{
     /* border: rebeccapurple 2px solid; */
     text-align: center;
+    background-color: #131a20;
     
   }
   
   .top-bg img{
     max-width: 1100px;
+    border-radius: 5px;
     /* max-width: 1500px; */
     height: auto;
   }
