11/14 slide pre next

--- a/main.css
+++ b/main.css
@@ -124,10 +124,10 @@ div>a>img {
   background-color: #003278;
 }
 
-#appad {
-  /* border: red 3px solid; */
+/* #appad {
+  
   margin: auto 0;
-}
+} */
 
 #appad>img {
   width: 100%;
