--- a/game/game.css
+++ b/game/game.css
@@ -280,6 +280,44 @@ body {
 }
 
 
+#mySidenav{
+  position: fixed;
+  top: 40%;
+}
+
+#mySidenav a {
+  position: absolute;
+  left: -70px;
+  transition: 0.3s;
+  padding: 15px;
+  width: 100px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+  left: 0;
+}
+
+#about {
+  top: 20px;
+  background-color: lightslategray;
+  
+}
+
+#blog {
+  top: 80px;
+  background-color: lightslategray;
+}
+
+#projects {
+  top: 140px;
+  background-color:  lightslategray;
+}
+
+
 
 
 
