--- a/main.css
+++ b/main.css
@@ -404,3 +404,28 @@ table caption {
   transition: background-color 0.6s ease;
 }
 
+#mySidenav{
+  position: fixed;
+  top: 40%;
+}
+
+#mySidenav a {
+  position: absolute;
+  left: -70px;
+  transition: 0.3s;
+  padding: 15px;
+  width: 100px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+  left: 0;
+}
+
+#projects {
+  top: 140px;
+  background-color:  darkred;
+}
