--- a/post-season/post-season.css
+++ b/post-season/post-season.css
@@ -233,3 +233,51 @@ body {
   height: auto;
 }
 
+#mySidenav{
+  position: fixed;
+  top: 40%;
+}
+
+#mySidenav a {
+  position: absolute;
+  left: -70px;
+  transition: 0.3s;
+  padding: 15px;
+  width: 100px;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav a:hover {
+  left: 0;
+}
+
+#about {
+  top: 20px;
+  background-color: darkred;
+  
+}
+
+#blog {
+  top: 80px;
+  background-color: darkred;
+}
+
+#projects {
+  top: 140px;
+  background-color:  darkred;
+}
+
+#contact {
+  top: 200px;
+  background-color: darkred;
+}
+
+
+
+
+
+
+
